[package]
name = "pio"
version = "0.2.1"
authors = ["snek", "The rp-rs developers"]
edition = "2021"
license = "MIT"
description = "Support for the Raspberry Silicon RP2040's PIO State Machines."
repository = "https://github.com/rp-rs/pio-rs"

[workspace]
members = ["pio-proc", "pio-parser"]

[dependencies]
arrayvec = { version = "0.7", default_features = false }
paste = "1.0"
num_enum = { version = "0.5", default_features = false }
#pio-proc = { path = "./pio-proc" }
#pio-parser = { path = "./pio-parser" }
