[package]
name = "pio-parser"
version = "0.2.2"
authors = ["snek", "The rp-rs Developers"]
edition = "2021"
description = "Raspberry Silicon PIO asm parser"
license = "MIT"
repository = "https://github.com/rp-rs/pio-rs"

[dependencies]
pio = { path = "..", version = "0.2.1" }
nom = "7.1.3"
nom_locate = "4.1.0"
thiserror = "1.0.40"
nom-tracable = "0.9.0"

[dev-dependencies]
test-generator = "0.3.0"
pretty_assertions = "0.6"

[features]
default = []
trace = ["nom-tracable/trace"]
