[package]
name = "pio-parser"
version = "0.2.2"
authors = ["snek", "The rp-rs Developers"]
edition = "2021"
description = "Raspberry Silicon PIO asm parser"
license = "MIT"
repository = "https://github.com/rp-rs/pio-rs"

[dependencies]
lalrpop-util = { version = "0.20.0", default-features = false, features = ["unicode"] }
pio = { path = "../pio", version = "0.3" }
logos = "0.13.0"
thiserror = "1.0.50"
itertools = "0.10.5"

[build-dependencies]
lalrpop = { version = "0.20.0", default-features = false, features = ["unicode"]}
# This is only here to work around https://github.com/lalrpop/lalrpop/issues/750
# It should be removed once that workaround is no longer needed.
regex-syntax = { version = "0.6", default_features = false, features = ["unicode"] }

[dev-dependencies]
test-generator = "0.3.1"
pretty_assertions = "1.4"
itertools = "0.10.5"
